--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
     <h1 class="title-t4">2023 신년계획</h1>
     <p class="msg">올해는 꼭 모두 지키기!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center">표현 많이하기</div>
+        <div class="bucket img1-t2 center">포트폴리오 만들기</div>
         <div class="bucket img2 center">토익공부하기</div>
         <div class="bucket img2 center">네트워크 관리사 자격증</div>
-        <div class="bucket img1-t4 center">은경이한테 잘하기</div>
-        <div class="bucket img1 center">사랑주기</div>
-        <div class="bucket img2-t5 center">사랑한디</div>
+        <div class="bucket img1-t4 center">개발일지 쓰기</div>
+        <div class="bucket img1 center">주 4회 운동하기</div>
+        <div class="bucket img2-t5 center">책 읽기</div>
     </div>
 
 </body>
